--- a/Licornes.css
+++ b/Licornes.css
@@ -87,7 +87,7 @@
     width: 100%;
     height: auto;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
   }
 
   .card{
@@ -97,14 +97,14 @@
   }
 
   img{
-    width: 270px;
-    height: 220px;
+    width: 200px;
+    height: 150px;
     border-radius: 15px 15px 0 0 ;
   }
 
   .p_box{
-    width: 270px;
-    height: 50px;
+    width: 200px;
+    height: 40px;
     background-color: #FCD1CB;
     border-radius: 0 0 15px 15px;
     display: flex;
@@ -112,12 +112,12 @@
     align-items: center;
   }
 
-  .p_box p{
+.p_box p{
     color: white;
     font-family: "Indie Flower", cursive;
     font-style: normal;
     font-weight: 400;
-    font-size: 30px;
+    font-size: 25px;
     text-decoration: none;
   }
 
