--- a/Poneys.css
+++ b/Poneys.css
@@ -73,53 +73,53 @@
     font-size: 60px;
   }
 
-  /* ----------- MAIN ---------- */
-  #cards_box{
-    width: 100%;
-    height: auto;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 30px 0;
-  }
+/* ----------- MAIN ---------- */
+#cards_box{
+  width: 100%;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 30px 0;
+}
 
-  .row{
-    width: 100%;
-    height: auto;
-    display: flex;
-    justify-content: space-around;
-  }
+.row{
+  width: 100%;
+  height: auto;
+  display: flex;
+  justify-content: space-evenly;
+}
 
-  .card{
-    display: flex;
-    flex-direction: column;
-    margin: 15px 0;
-  }
+.card{
+  display: flex;
+  flex-direction: column;
+  margin: 15px 0;
+}
 
-  img{
-    width: 270px;
-    height: 220px;
-    border-radius: 15px 15px 0 0 ;
-  }
+img{
+  width: 200px;
+  height: 150px;
+  border-radius: 15px 15px 0 0 ;
+}
 
-  .p_box{
-    width: 270px;
-    height: 50px;
-    background-color: #FCD1CB;
-    border-radius: 0 0 15px 15px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
+.p_box{
+  width: 200px;
+  height: 40px;
+  background-color: #FCD1CB;
+  border-radius: 0 0 15px 15px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
 .p_box p{
-    color: white;
-    font-family: "Indie Flower", cursive;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 30px;
-    text-decoration: none;
-  }
+  color: white;
+  font-family: "Indie Flower", cursive;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 25px;
+  text-decoration: none;
+}
 
   /* ---------- FOOTER ---------- */
   .banner_copyright{
